deploiment-k8s-fichiers/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-portfolio
  template:
    metadata:
      labels:
        app: my-portfolio
    spec:
      containers:
        - name: portfolio
          image: safeer932/safeer-portefolio:latest
          ports:
            - containerPort: 80
