deploiment-k8s-fichiers/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: my-portfolio
spec:
  selector:
    app: my-portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
