deploiment-k8s-fichiers/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-game-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: labyrinth-challenge.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-game
            port:
              number: 80
